[tool.poetry]
name = "python-playwright-demo"
version = "0.1.0"
description = ""
authors = ["Konstantin Smyshliaev <smyshlyaevkonst@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
